# net64-coop

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CODING_STYLE.md  CONTRIBUTING.md  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
CMakeModules/: CompilerFlags.cmake  CompilerWarnings.cmake  ENet.cmake  SDL2_finder.cmake  nlohmann_json.cmake
hooks/: pre-commit
scripts/: clang-format-pr-check.sh  create_appimage.sh
src/: .clang-format  CMakeLists.txt  build_info.cpp.in  build_info.hpp  filesystem.hpp  install_dir.cpp  types.hpp
src/common/: automatic_factory.hpp  badge.hpp  crtp.hpp  deleter.hpp  double_dispatch.hpp  id_manager.hpp  integer.hpp  is_instantiation.hpp  message_handler.hpp  message_interface.hpp  operator_proxy.hpp  resource_handle.hpp  sdl_event_handler.cpp  sdl_event_handler.hpp  shared_object.cpp  shared_object.hpp
src/core/: CMakeLists.txt  error_codes.cpp  error_codes.hpp  logging.cpp  logging.hpp
src/core/client/: client.cpp  client.hpp
src/core/emulator/: emulator.cpp  emulator.hpp  emulator_handle.cpp  emulator_handle.hpp  handle_config.hpp  m64plus.cpp  m64plus.hpp  m64plus_core.cpp  m64plus_plugin.cpp  process_handle.hpp  process_handle_base.hpp  process_linux.cpp  process_linux.hpp  process_windows.cpp  process_windows.hpp  shared_library.cpp  shared_library.hpp
src/core/game/: client_messages.hpp  game_logger.cpp  game_logger.hpp  game_messages.hpp  message_listener.cpp  message_listener.hpp  msg_queue.cpp  msg_queue.hpp  net64_header.hpp
src/core/memory/: conversion.hpp  mem_ptr.hpp  mem_ref.hpp  memory_handle.cpp  memory_handle.hpp  pointer.hpp  util.hpp
src/net64/: CMakeLists.txt  client.cpp  client.hpp  error_codes.cpp  error_codes.hpp  logging.cpp  logging.hpp  net64.cpp  net64.hpp  server.cpp  server.hpp
src/net64/client/: chat_client.cpp  chat_client.hpp  client_messages.hpp  game_logger.cpp  game_logger.hpp  game_messages.hpp  local_player.cpp  local_player.hpp  local_player_manager.cpp  local_player_manager.hpp  message_handler.cpp  message_handler.hpp  msg_queue.cpp  msg_queue.hpp  net64_header.hpp  player_list_manager.cpp  player_list_manager.hpp  remote_player.cpp  remote_player.hpp
src/net64/emulator/: emulator.hpp  m64plus.cpp  m64plus.hpp  m64plus_config.cpp  m64plus_config.hpp  m64plus_core.cpp  m64plus_core.hpp  m64plus_error.cpp  m64plus_error.hpp  m64plus_plugin.cpp  m64plus_plugin.hpp  shared_library.cpp  shared_library.hpp
src/net64/game/: client_messages.hpp  game_logger.cpp  game_logger.hpp  game_messages.hpp  message_listener.cpp  message_listener.hpp  msg_queue.cpp  msg_queue.hpp  net64_header.hpp
src/net64/memory/: conversion.hpp  memory_handle.cpp  memory_handle.hpp  pointer.hpp  util.hpp
src/net64/net/: errors.cpp  errors.hpp  message_ids.hpp  messages_client.hpp  messages_server.hpp  messages_shared.hpp  net_message.cpp  net_message.hpp  protocol.cpp  protocol.hpp
src/net64/server/: chat_server.cpp  chat_server.hpp  player.cpp  player.hpp  player_manager.cpp  player_manager.hpp
src/qt_gui/: CMakeLists.txt  app_settings.cpp  app_settings.hpp  emulator_audio_configuration.cpp  emulator_audio_configuration.hpp  emulator_audio_configuration.ui  emulator_controller_configuration.cpp  emulator_controller_configuration.hpp  emulator_controller_configuration.ui  emulator_video_configuration.cpp  emulator_video_configuration.hpp  emulator_video_configuration.ui  emulatorsettings.cpp  emulatorsettings.hpp  emulatorsettings.ui  m64p_settings_window.cpp  m64p_settings_window.hpp  m64p_settings_window.ui  main.cpp  main_window.cpp  main_window.hpp  main_window.ui  mainframe.cpp  mainframe.hpp  mainframe.ui  mario20client.cpp  mario20client.hpp  mario20protocol.cpp  mario20protocol.hpp  mario20server.cpp  mario20server.hpp  multiplayer_settings_window.cpp  multiplayer_settings_window.hpp  multiplayer_settings_window.ui  net64_thread.cpp  net64_thread.hpp  patch_dialog.cpp  patch_dialog.hpp  patch_dialog.ui  resources.qrc  (+4 more)
